Updated notif. to be fixed for (visible on scroll)

--- a/styles/05-Components/_notification.scss
+++ b/styles/05-Components/_notification.scss
@@ -1,5 +1,5 @@
 .notification-container {
-   position: absolute;
+   position: fixed;
    z-index: 999;
    top: -200px;
    left: 35%;
